Correction of some tests and code. > > Co-authored-by: Mohamed Charfi <mohamed.charfi@epfl.ch> Co-authored-by: azizbenhaj <ahmed.benhajhmida@epfl.ch>